<resources>
    <string name="pref_authorid">streamUserUUID</string>
    <string name="pref_author_email">streamUserEmail</string>
    <string name="pref_author_username">streamUsername</string>
    <string name="pref_author_gravatar">streamUserGravatar</string>

    <string name="backend_url">"http://go.sl.gtstrm.com:3000"</string>
    <!--<string name="backend_url">"http://10.0.2.2:3000"</string>-->

    <string name="app_name">GetStream Example Application</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="placeholder_author_name">\@iandouglas736</string>
    <string name="placeholder_created_date">2016&#8211;10&#8211;09</string>

    <string name="feed_item_photo_image">FeedItem Photo</string>
    <string name="feed_item_profile_image">FeedItem Profile Image</string>
    <string name="feed_item_author_name">FeedItem Author</string>
    <string name="feed_item_created_date">FeedItem Creation</string>

    <string name="regscreen_intro_text">Open Your Account</string>
    <string name="regscreen_placeholder_username">Username</string>
    <string name="regscreen_placeholder_email">Email Address</string>
    <string name="regscreen_agree_to_terms">By tapping Sign Up &amp; Accept, you agree to the <a href="http://getstream.io/legal">Terms of Service</a> and <a href="http://getstream.io/legal/privacy">Privacy Policy</a>.</string>

    <string name="title_activity_feed">FeedActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="button_feed_plus">+</string>
    <string name="contentdesc_profile_image">profile image</string>
    <string name="placeholder_feeditem_likes">13 likes</string>
    <string name="regscreen_signup_button_text"><![CDATA[Sign Up & Accept]]></string>

    <string name="example_preferences_item">Example Preferences Item</string>
    <string name="example_menu_item">Example Menu Item</string>

    <string name="menu_take_photo">Take Photo</string>
    <string name="menu_global_feed">Global Feed</string>
    <string name="menu_my_timeline">My Timeline</string>
    <string name="menu_users">Users</string>
    <string name="menu_my_profile">My Profile</string>
    <string name="menu_notification_feed">Notification Feed</string>
    <string name="menu_aggregated_feed">Aggregated Feed</string>
    <string name="menu_register">Register/Login</string>
    <string name="menu_sign_out">Sign Out</string>

    <string name="user_follow">Follow</string>
    <string name="user_unfollow">Unfollow</string>
    <string name="title_activity_register">Register</string>

    <!-- Strings related to register_main_layout -->
    <string name="prompt_email">Email</string>
    <!--<string name="prompt_password">Password (optional)</string>-->
    <!--<string name="action_sign_in">Sign in or register_main_layout</string>-->
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_username">This username is too short (3 or more characters)</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_photo">PhotoActivity</string>

    <!-- Strings for Photo intent -->
    <string name="btnIntend">Take Photo</string>
    <string name="cannot">Cannot</string>
    <string name="btn_upload_text">Upload to Stream</string>
    <string name="photo_thumbnail_desc">image thumbnail</string>
    <string name="your_username_here">Your Username Here</string>
    <string name="your_email_address_com">your.email@address.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
