<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/AppTheme"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">


    <Button
        android:id="@+id/btnIntend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/btnIntend" />


    <ImageView
        android:id="@+id/thumbnail_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnIntend"
        android:contentDescription="@string/photo_thumbnail_desc"
        android:gravity="center"
        android:visibility="visible" />


    <Button
        android:id="@+id/btnUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/thumbnail_image"
        android:gravity="center"
        android:text="@string/btn_upload_text" />


</RelativeLayout>