<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:minHeight="?android:attr/listPreferredItemHeight"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/userlist_profile_image"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/contentdesc_profile_image"
            android:src="@drawable/artist_placeholder" />

        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/userlist_author_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:fontFamily="sans-serif-medium"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:text="@string/placeholder_author_name"
            android:textColor="@color/stream_black"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/user_follow_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical|start"
                android:background="@color/stream_button_background"
                android:includeFontPadding="false"
                android:maxHeight="32dp"
                android:minHeight="32dp"
                android:text="@string/user_follow"
                android:textColor="@color/stream_button_text_black"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
