<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:paddingTop="16dp"
    android:minHeight="?android:attr/listPreferredItemHeight"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="16dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/feed_item_profile_image"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/contentdesc_profile_image"
                android:src="@drawable/artist_placeholder" />

            <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/feed_item_author_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:fontFamily="sans-serif-medium"
                android:paddingLeft="8dp"
                android:paddingStart="8dp"
                android:text="@string/placeholder_author_name"
                android:textColor="@color/stream_black"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/feed_follow_button"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:layout_gravity="center_vertical|start"
                    android:background="@color/stream_button_background"
                    android:includeFontPadding="false"
                    android:maxHeight="32dp"
                    android:minHeight="32dp"
                    android:text="@string/user_follow"
                    android:textColor="@color/stream_button_text_black"
                    android:textSize="16sp" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/feed_item_photo_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/expedition_49" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">

        <Button
            android:id="@+id/feeditem_like_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:minHeight="32dp"
            android:minWidth="32dp"
            android:background="@drawable/ic_favorite_border_black_24dp" />

        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/feed_item_likes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:fontFamily="sans-serif"
            android:paddingLeft="8dp"
            android:paddingStart="8dp"
            android:text="@string/placeholder_feeditem_likes"
            android:textColor="@color/stream_dark_gray"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="end"
            android:orientation="horizontal">
        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/feed_item_created_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:paddingStart="32dp"
            android:paddingEnd="16dp"
            android:layout_gravity="center_vertical|start"
            android:text="@string/placeholder_created_date"
            android:textColor="@color/stream_dark_black"
            android:textSize="12sp" />
    </LinearLayout>
    </LinearLayout>
</LinearLayout>
